--- a/home.html
+++ b/home.html
@@ -1,101 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./main.css">
-  <link rel="icon" href="./logo.jpg" type="image/jpg">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="icon" href="./logo.jpg" type="image/jpg" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="logo">
+        <img src="./images/logo.jpg" alt="Logo" />
+      </div>
+      <div class="menu" id="menu">
+        <ul>
+          <li><a href="./home.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./services.html">Services</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="burger" onclick="toggleMenu()">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+    </nav>
 
-  <nav class="navbar">
-    <div class="logo">
-      <img src="./logo.jpg" alt="Logo">
-    </div>
-    <div class="menu" id="menu">
-      <ul>
-        <li><a target="_blank" href="./home.html">Home</a></li>
-        <li><a target="_blank" href="./about.html">About</a></li>
-        <li><a target="_blank" href="./services.html">Services</a></li>
-        <li><a target="_blank" href="./contact.html">Contact</a></li>
-      </ul>
-    </div>
-    <div class="burger" onclick="toggleMenu()">
-      <div class="bar"></div>
-      <div class="bar"></div>
-      <div class="bar"></div>
-    </div>
-  </nav>
+    <br />
+    <br />
 
-<br>
-<br>
-
-<div class="cardd">
-  <img src="./bg.jpg" alt="Card Image">
-  <div class="cardd-content">
-      <div class="overlay-text">
+    <div class="cardd">
+      <img src="./images/bg.jpg" alt="Card Image" />
+      <div class="cardd-content">
+        <div class="overlay-text">
           <h1>Best Homes, Right Here!</h1>
-      </div>
-  </div>
-</div>
-
-<br>
-<br>
-
-<div class="card-container">
-
-  <div class="custom-card">
-    <div class="card-inner">
-      <div class="card-front">
-        <img src="./demo.jpg" alt="Fashion Image 1">
-      </div>
-      <div class="card-back">
-        <h2>OPULENCE GREEN</h2>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="custom-card">
-    <div class="card-inner">
-      <div class="card-front">
-        <img src="./to use (2).jpg" alt="Fashion Image 2">
+    <br />
+    <br />
+
+    <div class="card-container">
+      <div class="custom-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="./images/project1.jpg" alt="Project-1" />
+          </div>
+          <div class="card-back">
+            <h2>OPULENCE GREEN</h2>
+          </div>
+        </div>
       </div>
-      <div class="card-back">
-        <h2>PROJECT 2</h2>
+
+      <div class="custom-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="./images/project2.jpeg" alt="Project-2" />
+          </div>
+          <div class="card-back">
+            <h2>PROJECT 2</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="custom-card">
+        <div class="card-inner">
+          <div class="card-front">
+            <img src="./images/project3.png" alt="Project-3" />
+          </div>
+          <div class="card-back">
+            <h2>Coming Soon...</h2>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="custom-card">
-    <div class="card-inner">
-      <div class="card-front">
-        <img src="./to use (2).jpg" alt="Fashion Image 2">
+    <br />
+    <br />
+
+    <footer id="sticky-footer">
+      <div class="social-icons">
+        <a
+          href="https://wa.me/+918108595333"
+          target="_blank"
+          class="social-icon"
+          ><i class="fab fa-whatsapp"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/barodainfra/"
+          target="_blank"
+          class="social-icon"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.youtube.com/@barodainfra1293"
+          target="_blank"
+          class="social-icon"
+          ><i class="fab fa-youtube"></i
+        ></a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100081278386921"
+          target="_blank"
+          class="social-icon"
+          ><i class="fab fa-facebook"></i
+        ></a>
       </div>
-      <div class="card-back">
-        <h2>PROJECT 3</h2>
-      </div>
-    </div>
-  </div>
+    </footer>
 
-</div>
-
-<br>
-<br>
-
-<footer id="sticky-footer">
-  <div class="social-icons">
-    <a href="https://wa.me/+918108595333" target="_blank" class="social-icon"><i class="fab fa-whatsapp"></i></a>
-    <a href="https://www.instagram.com/barodainfra/" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/@barodainfra1293" target="_blank" class="social-icon"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.facebook.com/profile.php?id=100081278386921" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a>
-  </div>
-</footer>
-
-<script src="./main.js"></script>
-
-</body>
+    <script src="./main.js"></script>
+  </body>
 </html>
