Home Page Updated

--- a/home.html
+++ b/home.html
@@ -69,22 +69,22 @@
       <div class="custom-card">
         <div class="card-inner">
           <div class="card-front">
-            <img src="./images/project2.jpeg" alt="Project-2" />
-          </div>
-          <div class="card-back">
-            <h2>PROJECT 2</h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="custom-card">
-        <div class="card-inner">
-          <div class="card-front">
             <img src="./images/project3.png" alt="Project-3" />
           </div>
           <div class="card-back">
-            <h2>Coming Soon...</h2>
+            <h2>Launching Shri Ghanshyam Residency</h2>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="custom-card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="./images/project2.jpeg" alt="Project-2" />
+        </div>
+        <div class="card-back">
+          <h2>PROJECT 2</h2>
         </div>
       </div>
     </div>
