Updated Nilesh's About

--- a/about.html
+++ b/about.html
@@ -153,10 +153,10 @@
       <div class="cards">
         <img src="./images/person.png" alt="" />
         <p>
-          <b>NILESH PRAJAPATI | Sales Executive</b>
+          <b>NILESH PRAJAPATI | Assistant Sales Manager</b>
           <br /><br />
 
-          Nilesh Prajapati serves as a highly accomplished Sales Executive at
+          Nilesh Prajapati serves as a highly accomplished Asst. Sales Manager at
           Baroda Infra, bringing a wealth of experience from the automotive
           industry. Commencing his career as a Sales Executive at Popular
           Wheelers India Pvt. Ltd., Nilesh demonstrated expertise in sales
