Updated Home Page

--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
             <img src="./images/project3.png" alt="Project-2" />
           </div>
           <div class="card-back">
-            <h2>Launching Shri Ghanshyam Residency</h2>
+            <h2>Shri Ghanshyam Residency</h2>
           </div>
         </div>
       </div>
