--- a/services.html
+++ b/services.html
@@ -43,59 +43,6 @@
     <br />
     <br />
 
-    <!-- <h2 class="servHead">Our Services:</h2>
-
-<div class="card-container-services">
-
-  <div class="custom-card-services">
-    <div class="card-inner-services">
-      <div class="card-front-services">
-        <span class="text-over">Residential Flats/Bungalows</span>
-        <img src="./demo.jpg" alt="Residential Flats/Bungalows">
-      </div>
-      <div class="card-back-services">
-        <h2>Indulge in luxurious living with our exquisite range of residential apartments and bungalows. Immerse yourself in stylish, modern architecture designed for comfort and sophistication. Experience the perfect blend of aesthetics and functionality in your dream home.</h2>
-      </div>
-    </div>
-  </div>
-
-  <div class="custom-card-services">
-    <div class="card-inner-services">
-      <div class="card-front-services">
-        <span class="text-over">Residential Plots</span>
-        <img src="./openPlot.jpg" alt="Residential Plots">
-      </div>
-      <div class="card-back-services">
-        <h2>Discover the canvas for your dream home with our spacious residential plots. Embrace the freedom to design and build your perfect abode, surrounded by nature and community amenities. Unleash your creativity and create a personalized haven in a prime location.</h2>
-      </div>
-    </div>
-  </div>
-
-  <div class="custom-card-services">
-    <div class="card-inner-services">
-      <div class="card-front-services">
-        <span class="text-over">Commercial Plots</span>
-        <img src="./openPlot.jpg" alt="Commercial Plots">
-      </div>
-      <div class="card-back-services">
-        <h2>Unlock the potential for your business with our strategically located commercial plots. Tailor your space to suit your business needs, whether it's for retail, offices, or mixed-use developments. Invest in a prime commercial location and watch your business thrive in a vibrant community.</h2>
-      </div>
-    </div>
-  </div>
-
-  <div class="custom-card-services">
-    <div class="card-inner-services">
-      <div class="card-front-services">
-        <span class="text-over">Commercial Spaces</span>
-        <img src="./commercialBuilding.jpg" alt="Fashion Image 1">
-      </div>
-      <div class="card-back-services">
-        <h2>Elevate your business to new heights with our thoughtfully designed commercial apartments. Ideal for offices, startups, or retail spaces, our commercial properties offer a strategic location, contemporary design, and a professional environment. Boost your brand with a space that reflects success.</h2>
-      </div>
-    </div>
-  </div>
-</div> -->
-
     <div class="bg">
       <h2>Our Projects</h2>
     </div>
@@ -222,6 +169,32 @@
 
     <br />
     <br />
+
+    <hr />
+
+    <br /><br />
+
+    <div class="box-container">
+      <!-- Box 1 -->
+      <div class="box">
+        <img src="image1.jpg" alt="Image 1" />
+        <div class="box-text">Text for Box 1</div>
+      </div>
+
+      <!-- Box 2 -->
+      <div class="box">
+        <img src="image2.jpg" alt="Image 2" />
+        <div class="box-text">Text for Box 2</div>
+      </div>
+
+      <!-- Box 3 -->
+      <div class="box">
+        <img src="image3.jpg" alt="Image 3" />
+        <div class="box-text">Text for Box 3</div>
+      </div>
+
+      <!-- Add more boxes as needed -->
+    </div>
 
     <footer id="sticky-footer">
       <div class="social-icons">
