--- a/services.html
+++ b/services.html
@@ -174,27 +174,22 @@
 
     <br /><br />
 
-    <div class="box-container">
-      <!-- Box 1 -->
+    <!-- <div class="box-container">
       <div class="box">
         <img src="image1.jpg" alt="Image 1" />
         <div class="box-text">Text for Box 1</div>
       </div>
 
-      <!-- Box 2 -->
       <div class="box">
         <img src="image2.jpg" alt="Image 2" />
         <div class="box-text">Text for Box 2</div>
       </div>
 
-      <!-- Box 3 -->
       <div class="box">
         <img src="image3.jpg" alt="Image 3" />
         <div class="box-text">Text for Box 3</div>
       </div>
-
-      <!-- Add more boxes as needed -->
-    </div>
+    </div> -->
 
     <footer id="sticky-footer">
       <div class="social-icons">
