Another Minor Update

--- a/services.html
+++ b/services.html
@@ -170,11 +170,11 @@
     <br />
     <br />
 
-    <hr />
+    <!-- <hr />
 
     <br /><br />
 
-    <!-- <div class="box-container">
+     <div class="box-container">
       <div class="box">
         <img src="image1.jpg" alt="Image 1" />
         <div class="box-text">Text for Box 1</div>
