Some minor updates

--- a/about.html
+++ b/about.html
@@ -51,6 +51,11 @@
     <div class="servCard">
       <div class="cards">
         <img src="./images/person.png" alt="" />
+        <!-- <img
+          src="./images/LokendraSir'sImg.jpeg"
+          alt="Lokendra Sir's Img"
+          siz
+        /> -->
         <p>
           <b>LOKENDRA SINGH | CEO & Founder</b> <br /><br />
 
