--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
             <img src="./images/project2.jpeg" alt="Project-3" />
           </div>
           <div class="card-back">
-            <h2>PROJECT 3</h2>
+            <h2>Artham</h2>
           </div>
         </div>
       </div>
