--- a/about.html
+++ b/about.html
@@ -92,10 +92,10 @@
       <div class="cards">
         <img src="./images/person.png" alt="" />
         <p>
-          <b>MUGDHA GANDHI | Vice President</b> <br /><br />
+          <b>MUGDHA GANDHI | Project Manager</b> <br /><br />
 
           In the echelons of our esteemed organization, we proudly present Ms.
-          Mugdha Gandhi, a distinguished Civil Engineer and the Vice President
+          Mugdha Gandhi, a distinguished Civil Engineer and the Project Manager
           par excellence. With a stellar five-year career, Ms. Gandhi has not
           only carved her niche but has become the driving force behind pivotal
           areas such as Sales, Marketing, Tele-Calling, Data Analysis, Sales
@@ -118,7 +118,7 @@
           through the ever-evolving landscape of today's real estate market is
           not just successful but exceptionally informed.
           <br /><br />
-          As the Vice President, Ms. Mugdha Gandhi embodies a standard of
+          As the Project Manager, Ms. Mugdha Gandhi embodies a standard of
           professionalism and dedication that sets a defining tone for our
           organization. Her expansive knowledge and strategic prowess contribute
           significantly to our commitment to excellence, elevating the real
